@@ -783,6 +783,7 @@ set(test-libmongoc-sources
    ${SOURCE_DIR}/tests/test-mongoc-max-staleness.c
    ${SOURCE_DIR}/tests/test-mongoc-queue.c
    ${SOURCE_DIR}/tests/test-mongoc-read-concern.c
+   ${SOURCE_DIR}/tests/test-mongoc-read-write-concern.c
    ${SOURCE_DIR}/tests/test-mongoc-read-prefs.c
    ${SOURCE_DIR}/tests/test-mongoc-retryable-writes.c
    ${SOURCE_DIR}/tests/test-mongoc-rpc.c
