@@ -1,0 +1,29 @@
+{
+  "tests": [
+    {
+      "description": "Default",
+      "uri": "mongodb://localhost/",
+      "valid": true,
+      "warning": false,
+      "readConcern": {}
+    },
+    {
+      "description": "local specified",
+      "uri": "mongodb://localhost/?readConcernLevel=local",
+      "valid": true,
+      "warning": false,
+      "readConcern": {
+        "level": "local"
+      }
+    },
+    {
+      "description": "majority specified",
+      "uri": "mongodb://localhost/?readConcernLevel=majority",
+      "valid": true,
+      "warning": false,
+      "readConcern": {
+        "level": "majority"
+      }
+    }
+  ]
+}
