@@ -1,0 +1,118 @@
+{
+  "tests": [
+    {
+      "description": "Default",
+      "uri": "mongodb://localhost/",
+      "valid": true,
+      "warning": false,
+      "writeConcern": {}
+    },
+    {
+      "description": "w as a valid number",
+      "uri": "mongodb://localhost/?w=1",
+      "valid": true,
+      "warning": false,
+      "writeConcern": {
+        "w": 1
+      }
+    },
+    {
+      "description": "w as an invalid number",
+      "uri": "mongodb://localhost/?w=-2",
+      "valid": false,
+      "warning": null
+    },
+    {
+      "description": "w as a string",
+      "uri": "mongodb://localhost/?w=majority",
+      "valid": true,
+      "warning": false,
+      "writeConcern": {
+        "w": "majority"
+      }
+    },
+    {
+      "description": "wtimeoutMS as a valid number",
+      "uri": "mongodb://localhost/?wtimeoutMS=500",
+      "valid": true,
+      "warning": false,
+      "writeConcern": {
+        "wtimeoutMS": 500
+      }
+    },
+    {
+      "description": "wtimeoutMS as an invalid number",
+      "uri": "mongodb://localhost/?wtimeoutMS=-500",
+      "valid": false,
+      "warning": null
+    },
+    {
+      "description": "journal as false",
+      "uri": "mongodb://localhost/?journal=false",
+      "valid": true,
+      "warning": false,
+      "writeConcern": {
+        "journal": false
+      }
+    },
+    {
+      "description": "journal as true",
+      "uri": "mongodb://localhost/?journal=true",
+      "valid": true,
+      "warning": false,
+      "writeConcern": {
+        "journal": true
+      }
+    },
+    {
+      "description": "All options combined",
+      "uri": "mongodb://localhost/?w=3&wtimeoutMS=500&journal=true",
+      "valid": true,
+      "warning": false,
+      "writeConcern": {
+        "w": 3,
+        "wtimeoutMS": 500,
+        "journal": true
+      }
+    },
+    {
+      "description": "Unacknowledged with w",
+      "uri": "mongodb://localhost/?w=0",
+      "valid": true,
+      "warning": false,
+      "writeConcern": {
+        "w": 0
+      }
+    },
+    {
+      "description": "Unacknowledged with w and journal",
+      "uri": "mongodb://localhost/?w=0&journal=false",
+      "valid": true,
+      "warning": false,
+      "writeConcern": {
+        "w": 0,
+        "journal": false
+      }
+    },
+    {
+      "description": "Unacknowledged with w and wtimeoutMS",
+      "uri": "mongodb://localhost/?w=0&wtimeoutMS=500",
+      "valid": true,
+      "warning": false,
+      "writeConcern": {
+        "w": 0,
+        "wtimeoutMS": 500
+      }
+    },
+    {
+      "description": "Acknowledged with w as 0 and journal true",
+      "uri": "mongodb://localhost/?w=0&journal=true",
+      "valid": false,
+      "warning": false,
+      "writeConcern": {
+        "w": 0,
+        "journal": true
+      }
+    }
+  ]
+}
