@@ -93,6 +93,8 @@ test_queue_install (TestSuite *suite);
 extern void
 test_read_concern_install (TestSuite *suite);
 extern void
+test_read_write_concern_install (TestSuite *suite);
+extern void
 test_read_prefs_install (TestSuite *suite);
 extern void
 test_retryable_writes_install (TestSuite *suite);
@@ -2201,6 +2203,7 @@ main (int argc, char *argv[])
    test_matcher_install (&suite);
    test_queue_install (&suite);
    test_read_concern_install (&suite);
+   test_read_write_concern_install (&suite);
    test_read_prefs_install (&suite);
    test_retryable_writes_install (&suite);
    test_rpc_install (&suite);
